--- a/index.html
+++ b/index.html
@@ -479,6 +479,84 @@
           </ul>
         </div>
       </div>
+        <div class="footer-text">
+          <label class="footer-text-sub" for="user-email">Subscribe</label>
+        <input class="input-footer" type="email" id="user-email" name="email-contact" placeholder="E-mail"/>
+      </div>
+      <div class="button-sub">
+        <button class="button-subscribe" type="submit">Subscribe
+        <svg class="icon-subscribe" width="24" height="20">
+          <use href="./images/subscribe.svg#icon-subscribe"></use>
+        </svg>
+      </button>
+      </div>
+      
+    
     </footer>
+
+    <!-- modal page -->
+    <div class="backdrop is-hidden">
+      <div class="modal">
+        <button class="btn-close-modal" type="button">
+          <svg class="close-button-icon" width="8" height="8">
+            <use href="./images/close-button.svg#icon-close-button"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="form-contact" autocomplete="on">
+          <div class="modal-container">
+            <label class="info-contact-modal" for="username">Name</label>
+            <div class="form-items">
+              <input class="input-control" id="username" type="text" name="username" />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/modal-icon.svg#icon-name-modal"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-container">
+          <label class="info-contact-modal" for="user-tel">Phone</label>
+          <div class="form-items">
+            <input class="input-control" type="tel" id="user-tel" name="tel-contact" />
+            <svg class="form-icon" width="18" height="24">
+              <use href="./images/modal-icon.svg#icon-phone-modal"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="modal-container">
+          <label class="info-contact-modal" for="user-email">Email</label>
+          <div class="form-items">
+            <input class="input-control" type="email" id="user-email" name="email-contact" />
+            <svg class="form-icon" width="18" height="24">
+              <use href="./images/modal-icon.svg#icon-email-modal"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="modal-container">
+          <label class="info-contact-modal" for="user-comment"
+            >Comment</label>
+            <textarea 
+            id="user-comment"
+              class="input-textarea"
+              name="comment"
+              rows="5"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="user-privacy">
+          <input class="privacy visually-hidden" id="user-privacy" type="checkbox" name="user-privacy" value="true" required>
+          <label class="privacy-title">
+            <span class="privacy-span">
+              <svg class="check-icon" width="10" height="8">
+                <use href="./images/symbol-defs.svg#icon-check"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the <a href="" class="privacy-policy">Privacy Policy</a>
+        </label>
+      </input>
+      </div>
+          <button class="button-modal" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
