--- a/index.html
+++ b/index.html
@@ -479,19 +479,20 @@
           </ul>
         </div>
       </div>
-        <div class="footer-text">
-          <label class="footer-text-sub" for="user-email">Subscribe</label>
+      <div class="footer-sub">
+          <p class="footer-text">Subscribe </p>
+          <form action="" class="footer-sub-form">
+            <label class="input-footer-sub" for="user-email">
         <input class="input-footer" type="email" id="user-email" name="email-contact" placeholder="E-mail"/>
-      </div>
-      <div class="button-sub">
+      </label>
         <button class="button-subscribe" type="submit">Subscribe
         <svg class="icon-subscribe" width="24" height="20">
           <use href="./images/subscribe.svg#icon-subscribe"></use>
         </svg>
-      </button>
-      </div>
-      
-    
+      </button>  
+    </form>
+  </div>
+       </div>
     </footer>
 
     <!-- modal page -->
