--- a/index.html
+++ b/index.html
@@ -492,7 +492,6 @@
       </button>  
     </form>
   </div>
-       </div>
     </footer>
 
     <!-- modal page -->
@@ -506,9 +505,9 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="form-contact" autocomplete="on">
           <div class="modal-container">
-            <label class="info-contact-modal" for="username">Name</label>
+            <label class="info-contact-modal" for="user-name ">Name</label>
             <div class="form-items">
-              <input class="input-control" id="username" type="text" name="username" />
+              <input class="input-control" id="user-name " type="text" name="username" />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/modal-icon.svg#icon-name-modal"></use>
               </svg>
@@ -526,26 +525,26 @@
         <div class="modal-container">
           <label class="info-contact-modal" for="user-email">Email</label>
           <div class="form-items">
-            <input class="input-control" type="email" id="user-email" name="email-contact" />
+            <input class="input-control" type="email" id="user-email" name="user-email" />
             <svg class="form-icon" width="18" height="24">
               <use href="./images/modal-icon.svg#icon-email-modal"></use>
             </svg>
           </div>
         </div>
-        <div class="modal-container">
+        <div class="modal-comment">
           <label class="info-contact-modal" for="user-comment"
             >Comment</label>
             <textarea 
             id="user-comment"
               class="input-textarea"
-              name="comment"
+              name="user-comment"
               rows="5"
               placeholder="Text input"
             ></textarea>
           </div>
           <div class="user-privacy">
-          <input class="privacy visually-hidden" id="user-privacy" type="checkbox" name="user-privacy" value="true" required>
-          <label class="privacy-title">
+          <input class="privacy visually-hidden" id="user-privacy" type="checkbox" name="user-privacy" value="true" required />
+          <label class="privacy-title" for="user-privacy">
             <span class="privacy-span">
               <svg class="check-icon" width="10" height="8">
                 <use href="./images/symbol-defs.svg#icon-check"></use>
