--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
           <div class="modal-container">
             <label class="info-contact-modal" for="user-name ">Name</label>
             <div class="form-items">
-              <input class="input-control" id="user-name " type="text" name="username" />
+              <input class="input-control" id="user-name " type="text" name="user-name" />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/modal-icon.svg#icon-name-modal"></use>
               </svg>
@@ -544,7 +544,7 @@
           </div>
           <div class="user-privacy">
           <input class="privacy visually-hidden" id="user-privacy" type="checkbox" name="user-privacy" value="true" required />
-          <label class="privacy-title" for="user-privacy">
+          <label class="privacy-checkbox" for="user-privacy">
             <span class="privacy-span">
               <svg class="check-icon" width="10" height="8">
                 <use href="./images/symbol-defs.svg#icon-check"></use>
