--- a/index.html
+++ b/index.html
@@ -478,10 +478,10 @@
             </li>
           </ul>
         </div>
-      </div>
+      
       <div class="footer-sub">
           <p class="footer-text">Subscribe </p>
-          <form action="" class="footer-sub-form">
+          <form action="#" class="footer-sub-form">
             <label class="input-footer-sub" for="user-email">
         <input class="input-footer" type="email" id="user-email" name="email-contact" placeholder="E-mail"/>
       </label>
@@ -492,6 +492,7 @@
       </button>  
     </form>
   </div>
+</div>
     </footer>
 
     <!-- modal page -->
@@ -505,9 +506,9 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="form-contact" autocomplete="on">
           <div class="modal-container">
-            <label class="info-contact-modal" for="user-name ">Name</label>
+            <label class="info-contact-modal" for="user-name">Name</label>
             <div class="form-items">
-              <input class="input-control" id="user-name " type="text" name="user-name" />
+              <input class="input-control" id="user-name" type="text" name="user-name" />
               <svg class="form-icon" width="18" height="24">
                 <use href="./images/modal-icon.svg#icon-name-modal"></use>
               </svg>
@@ -543,8 +544,8 @@
             ></textarea>
           </div>
           <div class="user-privacy">
-          <input class="privacy visually-hidden" id="user-privacy" type="checkbox" name="user-privacy" value="true" required />
-          <label class="privacy-checkbox" for="user-privacy">
+          <input class="privacy visually-hidden" id="user-privacy" type="checkbox" name="user-privacy" value="true" required /> </input>
+           <label class="privacy-checkbox" for="user-privacy">
             <span class="privacy-span">
               <svg class="check-icon" width="10" height="8">
                 <use href="./images/symbol-defs.svg#icon-check"></use>
@@ -552,7 +553,7 @@
             </span>
             I accept the terms and conditions of the <a href="" class="privacy-policy">Privacy Policy</a>
         </label>
-      </input>
+     
       </div>
           <button class="button-modal" type="submit">Send</button>
         </form>
