--- a/index.html
+++ b/index.html
@@ -567,16 +567,16 @@
           </div>
           <div class="user-privacy">
             <input
-              class="privacy visually-hidden"
+              class="checkbox-input visually-hidden"
               id="user-privacy"
               type="checkbox"
               name="user-privacy"
               value="true"
               required
             />
-            <label class="privacy-checkbox" for="user-privacy">
-              <span class="privacy-span">
-                <svg class="check-icon" width="10" height="8">
+            <label class="form-checkbox-label" for="user-privacy">
+              <span class="check">
+                <svg width="10" height="8">
                   <use href="./images/symbol-defs.svg#icon-check"></use>
                 </svg>
               </span>
