--- a/index.html
+++ b/index.html
@@ -194,7 +194,11 @@
           <h2 class="first-title">Our Team</h2>
           <ul class="team-cards">
             <li class="team-card">
-              <img src="./images/card-1-mark.jpg" alt="Mark Guerrero" />
+              <img
+                srcset="./images/card-1-mark@2x.jpg"
+                src="./images/card-1-mark.jpg"
+                alt="Mark Guerrero"
+              />
               <div class="social-team-icons">
                 <h3 class="second-title">Mark Guerrero</h3>
                 <p class="main-text">Product Designer</p>
@@ -239,6 +243,7 @@
             </li>
             <li class="team-card">
               <img
+                srcset="./images/card-2-tom@2x.jpg"
                 src="./images/card-2-tom.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -287,6 +292,7 @@
             </li>
             <li class="team-card">
               <img
+                srcset="./images/card-3-camila@2x.jpg"
                 src="./images/card-3-camila.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -335,6 +341,7 @@
             </li>
             <li class="team-card">
               <img
+                srcset="./images/card-4-daniel@2x.jpg"
                 src="./images/card-4-daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -392,6 +399,7 @@
             <li class="portfolio-card">
               <div class="portfolio-img">
                 <img
+                  srcset="./images/banking-app@2x.jpg"
                   src="./images/banking-app.jpg"
                   alt="Banking App"
                   width="360"
@@ -411,6 +419,7 @@
             <li class="portfolio-card">
               <div class="portfolio-img">
                 <img
+                  srcset="./images/cashless@2x.jpg"
                   src="./images/cashless.jpg"
                   alt="Cashless Payment"
                   width="360"
@@ -430,6 +439,7 @@
             <li class="portfolio-card">
               <div class="portfolio-img">
                 <img
+                  srcset="./images/meditation-app@2x.jpg"
                   src="./images/meditation-app.jpg"
                   alt="Meditation App"
                   width="360"
@@ -449,6 +459,7 @@
             <li class="portfolio-card">
               <div class="portfolio-img">
                 <img
+                  srcset="./images/taxi-servies@2x.jpg"
                   src="./images/taxi-servies.jpg"
                   alt="Taxi Service"
                   width="360"
@@ -468,6 +479,7 @@
             <li class="portfolio-card">
               <div class="portfolio-img">
                 <img
+                  srcset="./images/screen@2x.jpg"
                   src="./images/screen.jpg"
                   alt="Screen Illustrations"
                   width="360"
@@ -487,6 +499,7 @@
             <li class="portfolio-card">
               <div class="portfolio-img">
                 <img
+                  srcset="./images/online-course@2x.jpg"
                   src="./images/online-course.jpg"
                   alt="Online Courses"
                   width="360"
